# qmweb-sign

./: .editorconfig  .gitignore  LICENSE  README.MD  README.md  index.d.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  zzc_sign.py
qmweb/: ag1_cipher.py  ag1_cipher_test.py  zzc_sign.py
qmweb-rust-wasm/: Cargo.toml  LICENSE_MIT  README.MD  build.js  build.sh
qmweb-rust-wasm/src/: lib.rs
shared/: hash_20200305.js
src/: ag1_cipher.test.ts  ag1_cipher.ts  node.ts  test.ts  web.ts  zzc_sign.test.ts  zzc_sign.ts
zza/: README.MD
zza/decompiler/: cli-decompile.js  zza_decompiler.js  zza_vm.json
zza/emulate/: run_zza.js  zza.js
zza/implementation/: getSecuritySign.js
zza/original/: zza_orig.js  zza_orig.min.js
zzb/: README.MD
zzb/decompiler/: cli-decompile.js  decode_vm.js  zzb_decompiler.js  zzb_vm.json
zzb/emulate/: run_zzb.js  zzb.js
zzb/implementation/: getSecuritySign.js
zzb/original/: zzb_orig.js  zzb_orig.min.js
