[package]
name = "qmweb-rust-wasm"
version = "0.1.0"
authors = ["Jixun <8041017-jixunmoe@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.84"
sha-1 = "0.10.1"
hex = "0.4.3"
base64 = "0.22.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1
