[package]
name = "qmweb-rust-wasm"
version = "0.1.0"
authors = ["Jixun <8041017-jixunmoe@users.noreply.gitlab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = { version = "0.2.84", default-features = false, features = ["std"] }
sha-1 = { version = "0.10.1", default-features = false, features = [] }
hex = { version = "0.4.3", default-features = false, features = [] }
base64 = { version = "0.22.1", default-features = false, features = [] }
wee_alloc = { version = "0.4.5" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1
incremental = false
debug-assertions = false
debug = false
rpath = false
overflow-checks = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = true
